[FIX][IMP] dsh: Fix mails and change color of Odoo.sh Dark Mode
Fix the colors used to the mail tab.
Improve the colors in the builds page.

--- a/dark-odoo-sh.user.css
+++ b/dark-odoo-sh.user.css
@@ -2,7 +2,7 @@
 @name         Dark Odoo SH
 @description  Make odoo SH dark
 @namespace    https://github.com/Maurin3
-@version      1.0.0
+@version      1.1.0
 @author       Maurin3
 @homepageURL  https://github.com/Maurin3/Userstyles
 @supportURL   https://github.com/Maurin3/Userstyles/issues
@@ -29,6 +29,9 @@
     ::placeholder {
         color: #CCCCCC !important;
         opacity: 1; /* Firefox */
+    }
+    .form-control:disabled, .form-control.o_wysiwyg_loader, .form-control[readonly]{
+        background-color: #555;
     }
     
     /* Projects Page */
@@ -197,6 +200,9 @@
     .odoo_sh .text-muted{
         color: #a0aeb9 !important;
     }
+    .o_branch_no_build{
+        color: #bfbfbf;
+    }
     
     /* Branch Monitoring Page */
     .alert-secondary {
@@ -270,7 +276,7 @@
         color: #FFFFFF;
     }
     .card-body {
-        background-color:  #383838 !important;
+        background-color:rgba(255, 255, 255, 0.1) !important;
         color: #FFFFFF;
     }
     .bg-white-75 {
@@ -282,7 +288,7 @@
         color: #FFFFFF;
     }
     .o_builds_view .o_builds_card .o_builds_info pre{
-        background-color: #222222 !important;
+        background-color: rgba(255, 255, 255, 0.05) !important;
         border-radius: 15px;
     }
     .o_card_footer{
@@ -313,6 +319,12 @@
     }
     .text-700{
         color: #bfbfbf !important;
+    }
+    .o_builds_view .border-bottom{
+        border-bottom: 1px solid rgba(255,255,255,0.5) !important
+    }
+    .o_builds_view .o_builds_card{
+        box-shadow: 0 -1px 0 0 rgba(255,255,255,0.5) ;
     }
     
     /* Branch Logs Page */
@@ -371,6 +383,19 @@
     .paas-worker-message-headers .paas-worker-collapse-title a,
     .paas-worker-message-headers .paas-worker-collapse-title a:before{
         background-color: #222222 !important;
+    }
+    
+    .o_branch_mail {
+        background-color: #222222;
+    }
+    
+    .o_branch_mail table.table.table-condensed.paas-master-table-messages > thead > tr.active > td, .o_branch_mail table.table.table-condensed.paas-master-table-messages > tbody > tr.active > td{
+        background-color: #00A09D;
+    }
+    
+    .o_branch_mail .paas-master-mail .paas-master-message-display.o_sh_has_message .paas-master-message-headers a{
+        background-color: #222222;
+        color: #dfdfdf !important;
     }
     
     /* Status Page */
